--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
 			</div>
 		</section>
 		
+	<div class="footer container-fluid">
+		<a href="http://ntnu.no"><img src="../img/hovedlogo_eng.png"></a>
+	</div>
+		
 	<div class="modal fade" id="events-modal">
 		<div class="modal-dialog">
 			<div class="modal-content">
