--- a/form.html
+++ b/form.html
@@ -207,9 +207,9 @@
 			</div>
 		</section>
 		
-		<div class="footer">
-			
-		</div>
+	<div class="footer container-fluid">
+		<a href="http://ntnu.no"><img src="../img/hovedlogo_eng.png"></a>
+	</div>
 		
 		<div class="modal fade" id="events-modal">
 			<div class="modal-dialog">
