--- a/form.html
+++ b/form.html
@@ -65,11 +65,11 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar">
 			  <form class="navbar-form navbar-right">
-				<button type="submit" class="btn btn-default">Login</button>
+				<button type="submit" class="btn btn-default">Log out</button>
 			  </form>
 			  <ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> [Username]<span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Test User <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 						<li role="separator" class="divider"></li>
@@ -95,32 +95,40 @@
 			<div class="panel panel-default">
 				<div class="panel-heading nav nav-default">
 					<div class="pull-left">
-                        <h3 style="margin-top: 0.5em";>Cruise Calendar <span class="label label-default dateLabel">May 2017</span></h3>
+                        <h3>Cruise Calendar <span class="label label-default dateLabel">May 2017</span></h3>
 					</div>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" class="calPreviousButton">&larr;</a></li>
-						<li><a href="#" class="calNextButton">&rarr;</a></li>
-						<li><a href="#" class="calTodayButton">Today</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#" class="calYearButton">Year</a></li>
-								<li><a href="#" class="calMonthButton">Month</a></li>
-								<li><a href="#" class="calWeekButton">Week</a></li>
-								<li><a href="#" class="calDayButton">Day</a></li>
-							</ul>
-						</li>
-					</ul>
+					<div class="btn-toolbar pull-right" role="group" aria-label="...">
+						<div class="btn-group">
+					  <button type="button" class="btn btn-default calPreviousButton"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+					  <button type="button" class="btn btn-default calNextButton"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+					  <button type="button" class="btn btn-default calTodayButton">Today</button>
+						</div>
+					  <div class="btn-group" role="group">
+						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  View
+						  <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu">
+							<li><a href="#" class="calYearButton">Year</a></li>
+							<li><a href="#" class="calMonthButton">Month</a></li>
+							<li><a href="#" class="calWeekButton">Week</a></li>
+							<li><a href="#" class="calDayButton">Day</a></li>
+						</ul>
+					  </div>
+					</div>
 				</div>
 			  <div class="panel-body">
 				<div id="calendar"></div>
 			  </div>
 			  <div class="panel-footer">
-				<nav aria-label="...">
-				  <ul class="pager">
-					<li class="calPreviousButton previous"><a href="#"><span aria-hidden="true">&larr;</span> Previous</a></li>
-					<li class="calNextButton next"><a href="#">Next <span aria-hidden="true">&rarr;</span></a></li>
-				  </ul>
-				</nav>
+				<div class="btn-toolbar" role="group" aria-label="...">
+				  <div class="btn-group pull-left">
+						 <button type="button" class="btn btn-default calPreviousButton"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+				  </div>
+				  <div class="btn-group pull-right">
+					  <button type="button" class="btn btn-default calNextButton"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+				  </div>
+				 </div>
 			  </div>
 			</div>
 		</section>
@@ -207,9 +215,9 @@
 			</div>
 		</section>
 		
-	<div class="footer container-fluid">
-		<a href="http://ntnu.no"><img src="../img/hovedlogo_eng.png"></a>
-	</div>
+		<div class="footer container-fluid">
+			<a href="http://ntnu.no"><img src="../img/hovedlogo_eng.png"></a>
+		</div>
 		
 		<div class="modal fade" id="events-modal">
 			<div class="modal-dialog">
@@ -227,92 +235,92 @@
 			</div>
 		</div>
 
-	<!-- slow script includes -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/gunnerus.js"></script>
-	<script src="js/jquery.fittext.js"></script>
-	<script src="http://www.w3schools.com/lib/w3data.js"></script>
-    <script type="text/javascript" src="js/underscore-min.js"></script>
-    <script type="text/javascript" src="js/calendar.js"></script>
-    <script type="text/javascript">
-		var calendar = $('#calendar').calendar({
-			events_source: [
-				{
-					"id": 293,
-					"title": "Event 1",
-					"url": "http://example.com",
-					"class": "event-important",
-					"start": 1485995632800, // Milliseconds
-					"end": 1489995632700 // Milliseconds
-				}],
-				modal: "#events-modal",
-				modal_type: "ajax",
-				modal_title : function (e) { return e.title },
-				view: "year",
-				first_day: "1",
-				onAfterViewLoad: function(view) {
-					$('.dateLabel').text(this.getTitle());
-				},
-				views: {
-					year: {
-						slide_events: 1,
-						enable: 1
+		<!-- slow script includes -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/gunnerus.js"></script>
+		<script src="js/jquery.fittext.js"></script>
+		<script src="http://www.w3schools.com/lib/w3data.js"></script>
+		<script type="text/javascript" src="js/underscore-min.js"></script>
+		<script type="text/javascript" src="js/calendar.js"></script>
+		<script type="text/javascript">
+			var calendar = $('#calendar').calendar({
+				events_source: [
+					{
+						"id": 293,
+						"title": "Event 1",
+						"url": "http://example.com",
+						"class": "event-important",
+						"start": 1485995632800, // Milliseconds
+						"end": 1489995632700 // Milliseconds
+					}],
+					modal: "#events-modal",
+					modal_type: "ajax",
+					modal_title : function (e) { return e.title },
+					view: "year",
+					first_day: "1",
+					onAfterViewLoad: function(view) {
+						$('.dateLabel').text(this.getTitle());
 					},
-					month: {
-						slide_events: 1,
-						enable: 1
-					},
-					week: {
-						enable: 1
-					},
-					day: {
-						enable: 1
+					views: {
+						year: {
+							slide_events: 1,
+							enable: 1
+						},
+						month: {
+							slide_events: 1,
+							enable: 1
+						},
+						week: {
+							enable: 1
+						},
+						day: {
+							enable: 1
+						}
 					}
-				}
-			}); 
-		$('.calendar .calPreviousButton').click(function () {
-			calendar.navigate('prev');
-			return false;
-		});
-		$('.calendar .calNextButton').click(function () {
-			calendar.navigate('next');
-			return false;
-		});
-		$('.calendar .calTodayButton').click(function () {
-			calendar.navigate('today');
-			return false;
-		});
-		$('.calendar .calYearButton').click(function () {
-			calendar.view('year');
-			return false;
-		});
-		$('.calendar .calMonthButton').click(function () {
-			calendar.view('month');
-			return false;
-		});
-		$('.calendar .calWeekButton').click(function () {
-			calendar.view('week');
-			return false;
-		});
-		$('.calendar .calDayButton').click(function () {
-			calendar.view('day');
-			return false;
-		});
-    </script>
-	<script>
-	$(".infoCol-header").fitText();
-	</script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+				}); 
+			$('.calendar .calPreviousButton').click(function () {
+				calendar.navigate('prev');
+				return false;
+			});
+			$('.calendar .calNextButton').click(function () {
+				calendar.navigate('next');
+				return false;
+			});
+			$('.calendar .calTodayButton').click(function () {
+				calendar.navigate('today');
+				return false;
+			});
+			$('.calendar .calYearButton').click(function () {
+				calendar.view('year');
+				return false;
+			});
+			$('.calendar .calMonthButton').click(function () {
+				calendar.view('month');
+				return false;
+			});
+			$('.calendar .calWeekButton').click(function () {
+				calendar.view('week');
+				return false;
+			});
+			$('.calendar .calDayButton').click(function () {
+				calendar.view('day');
+				return false;
+			});
+		</script>
+		<script>
+		$(".infoCol-header").fitText();
+		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-84462651-1', 'auto');
-	ga('send', 'pageview');
-	</script>
+		ga('create', 'UA-84462651-1', 'auto');
+		ga('send', 'pageview');
+		</script>
 	</body>
 </html>
