--- a/form.html
+++ b/form.html
@@ -209,7 +209,7 @@
 							<input type="checkbox"> Check me out
 						</label>
 					</div>
-					<button type="submit" class="btn btn-default">Save</button>
+					<button type="submit" class="btn btn-default">Save for later</button>
 					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
 			</div>
