Added "Terms and Conditions" field to form

--- a/form.html
+++ b/form.html
@@ -137,6 +137,19 @@
 			<div class="container">
 				<form>
 					<div class="page-header">
+						<h3>Ordering Information, Conditions and Terms</h3>
+					</div>
+					<div class="container">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis sit amet molestie turpis. Nulla viverra hendrerit tellus, sit amet dignissim ipsum vulputate ac. Aliquam sodales maximus malesuada. Aliquam mauris magna, tempus vel blandit eu, euismod sit amet libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+					<p>Suspendisse arcu nisi, iaculis nec fringilla vitae, rutrum condimentum nisl. Sed condimentum sit amet diam nec ultrices. Praesent eu metus enim. Integer hendrerit, diam vel euismod interdum, arcu eros laoreet mi, porttitor iaculis turpis felis a neque. Quisque molestie luctus ligula a sodales. Sed rhoncus enim turpis, in interdum orci fermentum nec.</p>
+					<p>Duis id ligula tincidunt, condimentum ipsum at, porta urna. Mauris blandit, est eget facilisis elementum, mi velit lobortis urna, nec pulvinar elit urna sed nisi. Cras quis diam non velit gravida imperdiet sed eu nibh.  Pellentesque vitae lectus velit. Phasellus efficitur viverra auctor. Cras nec egestas lacus, quis viverra justo.</p>
+					</div>
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"> I accept these terms and conditions
+						</label>
+					</div>
+					<div class="page-header">
 						<h3>Basic Information</h3>
 					</div>
 					<div class="form-group">
