--- a/form.html
+++ b/form.html
@@ -85,64 +85,24 @@
 			
 		</div>
 		
-		<div class="container">
-			<div class="page-header">
-				<h1>Register New Cruise</h3>
-			</div>
-		</div>
-		
-		<section class="container calendar">
-			<div class="panel panel-default">
-				<div class="panel-heading nav nav-default">
-					<div class="pull-left">
-                        <h3>Cruise Calendar <span class="label label-default dateLabel">May 2017</span></h3>
-					</div>
-					<div class="btn-toolbar pull-right" role="group" aria-label="...">
-						<div class="btn-group">
-					  <button type="button" class="btn btn-default calPreviousButton"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
-					  <button type="button" class="btn btn-default calNextButton"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
-					  <button type="button" class="btn btn-default calTodayButton">Today</button>
-						</div>
-					  <div class="btn-group" role="group">
-						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  View
-						  <span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu">
-							<li><a href="#" class="calYearButton">Year</a></li>
-							<li><a href="#" class="calMonthButton">Month</a></li>
-							<li><a href="#" class="calWeekButton">Week</a></li>
-							<li><a href="#" class="calDayButton">Day</a></li>
-						</ul>
-					  </div>
-					</div>
-				</div>
-			  <div class="panel-body">
-				<div id="calendar"></div>
-			  </div>
-			  <div class="panel-footer">
-				<div class="btn-toolbar" role="group" aria-label="...">
-				  <div class="btn-group pull-left">
-						 <button type="button" class="btn btn-default calPreviousButton"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
-				  </div>
-				  <div class="btn-group pull-right">
-					  <button type="button" class="btn btn-default calNextButton"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
-				  </div>
-				 </div>
-			  </div>
-			</div>
-		</section>
-		
 		<section class="cruiseForm">
 			<div class="container">
 				<form>
 					<div class="page-header">
-						<h3>Ordering Information, Conditions and Terms</h3>
+						<h1>Register New Cruise</h3>
+					</div>
+					<div class="page-header">
+						<h3>Ordering Information</h3>
 					</div>
 					<div class="container">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis sit amet molestie turpis. Nulla viverra hendrerit tellus, sit amet dignissim ipsum vulputate ac. Aliquam sodales maximus malesuada. Aliquam mauris magna, tempus vel blandit eu, euismod sit amet libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-					<p>Suspendisse arcu nisi, iaculis nec fringilla vitae, rutrum condimentum nisl. Sed condimentum sit amet diam nec ultrices. Praesent eu metus enim. Integer hendrerit, diam vel euismod interdum, arcu eros laoreet mi, porttitor iaculis turpis felis a neque. Quisque molestie luctus ligula a sodales. Sed rhoncus enim turpis, in interdum orci fermentum nec.</p>
-					<p>Duis id ligula tincidunt, condimentum ipsum at, porta urna. Mauris blandit, est eget facilisis elementum, mi velit lobortis urna, nec pulvinar elit urna sed nisi. Cras quis diam non velit gravida imperdiet sed eu nibh.  Pellentesque vitae lectus velit. Phasellus efficitur viverra auctor. Cras nec egestas lacus, quis viverra justo.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis sit amet molestie turpis. Nulla viverra hendrerit tellus, sit amet dignissim ipsum vulputate ac. Aliquam sodales maximus malesuada. Aliquam mauris magna, tempus vel blandit eu, euismod sit amet libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+					</div>
+					<div class="page-header">
+						<h3>Conditions and Terms</h3>
+					</div>
+					<div class="container">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis sit amet molestie turpis. Nulla viverra hendrerit tellus, sit amet dignissim ipsum vulputate ac. Aliquam sodales maximus malesuada. Aliquam mauris magna, tempus vel blandit eu, euismod sit amet libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+						<p>Suspendisse arcu nisi, iaculis nec fringilla vitae, rutrum condimentum nisl. Sed condimentum sit amet diam nec ultrices. Praesent eu metus enim. Integer hendrerit, diam vel euismod interdum, arcu eros laoreet mi, porttitor iaculis turpis felis a neque. Quisque molestie luctus ligula a sodales. Sed rhoncus enim turpis, in interdum orci fermentum nec.</p>
 					</div>
 					<div class="checkbox">
 						<label>
@@ -150,13 +110,54 @@
 						</label>
 					</div>
 					<div class="page-header">
-						<h3>Basic Information</h3>
+						<h3>Basic Cruise Information</h3>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Cruise name</label>
 						<p class="help-block">Example block-level help text here.</p>
 						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
 					</div>
+					<section class="container calendar">
+						<div class="panel panel-default">
+							<div class="panel-heading nav nav-default">
+								<div class="pull-left">
+									<h3>Cruise Calendar <span class="label label-default dateLabel">May 2017</span></h3>
+								</div>
+								<div class="btn-toolbar pull-right" role="group" aria-label="...">
+									<div class="btn-group">
+								  <button type="button" class="btn btn-default calPreviousButton"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+								  <button type="button" class="btn btn-default calNextButton"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+								  <button type="button" class="btn btn-default calTodayButton">Today</button>
+									</div>
+								  <div class="btn-group" role="group">
+									<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									  View
+									  <span class="caret"></span>
+									</button>
+									<ul class="dropdown-menu">
+										<li><a href="#" class="calYearButton">Year</a></li>
+										<li><a href="#" class="calMonthButton">Month</a></li>
+										<li><a href="#" class="calWeekButton">Week</a></li>
+										<li><a href="#" class="calDayButton">Day</a></li>
+									</ul>
+								  </div>
+								</div>
+							</div>
+						  <div class="panel-body">
+							<div id="calendar"></div>
+						  </div>
+						  <div class="panel-footer">
+							<div class="btn-toolbar" role="group" aria-label="...">
+							  <div class="btn-group pull-left">
+									 <button type="button" class="btn btn-default calPreviousButton"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+							  </div>
+							  <div class="btn-group pull-right">
+								  <button type="button" class="btn btn-default calNextButton"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+							  </div>
+							 </div>
+						  </div>
+						</div>
+					</section>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Cruise start date</label>
 						<p class="help-block">Example block-level help text here.</p>
@@ -183,7 +184,7 @@
 						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
 					</div>
 					<div class="page-header">
-						<h3>Participants</h3>
+						<h3>Cruise Participants</h3>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Participant name</label>
