--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
 				 </div>
 			  </div>
 			</div>
+			<div class="btn-group-justified btn-group">
+				<div class="btn-group btn-group-lg" role="group" aria-label="...">
+					<button type="button" class="btn btn-primary">Order Cruise</button>
+				</div>
+			</div>
 		</section>
 		
 		<div class="footer container-fluid">
