Changed order <button> to <a>

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			</div>
 			<div class="btn-group-justified btn-group">
 				<div class="btn-group btn-group-lg" role="group" aria-label="...">
-					<button type="button" class="btn btn-primary">Order Cruise</button>
+					<a href="form.html" class="btn btn-primary">Order Cruise</a>
 				</div>
 			</div>
 		</section>
