--- a/form.html
+++ b/form.html
@@ -223,8 +223,14 @@
 							<input type="checkbox"> Check me out
 						</label>
 					</div>
-					<button type="submit" class="btn btn-default">Save for later</button>
-					<button type="submit" class="btn btn-default">Submit</button>
+					<div class="btn-group-justified btn-group">
+						<div class="btn-group btn-group-lg" role="group" aria-label="...">
+							<button type="submit" class="btn btn-info">Save for later</button>
+						</div>
+						<div class="btn-group btn-group-lg" role="group" aria-label="...">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
 				</form>
 			</div>
 		</section>
