More work on admin/user views

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Test User <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
+							<li><a href="user.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="#">Your Cruises</a></li>
 							<li><a href="#">Stuff</a></li>
@@ -200,8 +200,8 @@
 				events_source: [
 					{
 						"id": 293,
-						"title": "Event 1",
-						"url": "http://example.com",
+						"title": "Tokt 1",
+						"url": "test",
 						"class": "event-important",
 						"start": 1485995632800, // Milliseconds
 						"end": 1489995632700 // Milliseconds
