--- a/form.html
+++ b/form.html
@@ -65,13 +65,13 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar">
 			  <form class="navbar-form navbar-right">
-				<button type="submit" class="btn btn-default">Log out</button>
+				<a href="index.html" class="btn btn-default">Log out</a>
 			  </form>
 			  <ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Test User <span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
+						<li><a href="user.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Your Cruises</a></li>
 						<li><a href="#">Stuff</a></li>
