Added user page styles, general fixes

--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
-		<title>R/V Gunnerus Reservation System - Cruise Registration</title>
+		<title>R/V Gunnerus Reservation System - Admin Panel</title>
 
 		<!-- Themed Bootstrap core CSS -->
 		<link href="styles/gunnerus_bootstrap.min.css" rel="stylesheet">
@@ -74,8 +74,7 @@
 						<li><a href="user.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Your Cruises</a></li>
-						<li><a href="#">Stuff</a></li>
-						<li><a href="#">More stuff</a></li>
+						<li><a href="#">Options</a></li>
 					</ul>
 				</li>
 			  </ul>
@@ -89,23 +88,23 @@
 		  <div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
 			  <ul class="nav nav-sidebar">
-				<li class="active"><a href="#">Oversikt <span class="badge">5</span></a></a></li>
-				<li><a href="#">Tokt <span class="badge">2</span></a></a></li>
-				<li><a href="#">Brukere <span class="badge">3</span></a></li>
-				<li><a href="#">Fakturautskrift</a></li>
-				<li><a href="#">Systeminnstillinger</a></li>
+				<li class="active"><a href="#">Overview <span class="badge">5</span></a></a></li>
+				<li><a href="#">Cruises <span class="badge">2</span></a></a></li>
+				<li><a href="#">Users <span class="badge">3</span></a></li>
+				<li><a href="#">Invoices</a></li>
+				<li><a href="#">System settings</a></li>
 			  </ul>
 			</div>
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 				<div class="alert alert-info alert-dismissible" role="alert">
 				  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				  <strong><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Info:</strong> Tre nye brukere trenger godkjenning.
+				  <strong><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Info:</strong> Three new users need approval.
 				</div>
 				<div class="alert alert-warning alert-dismissible" role="alert">
 				  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				  <strong><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Advarsel:</strong> Et tokt mangler informasjon med innleveringsfrist om under en uke.
+				  <strong><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Warning:</strong> One cruise is missing information which is due in under a week.
 				</div>
-			  <h1 class="page-header">Oversikt</h1>
+			  <h1 class="page-header">Overview</h1>
 
 			  <!--<div class="row placeholders">
 				<div class="col-xs-6 col-sm-3 placeholder">
@@ -130,7 +129,7 @@
 				</div>
 			  </div>-->
 
-			  <h2 class="sub-header">Tokt som trenger oppmerksomhet</h2>
+			  <h2 class="sub-header">Cruises that need attention</h2>
 			  <div class="table-responsive">
 				<table class="table table-striped">
 				  <thead>
@@ -175,7 +174,7 @@
 				</table>
 			  </div>
 			  
-			  <h2 class="sub-header">Brukere som trenger oppmerksomhet</h2>
+			  <h2 class="sub-header">Users that need attention</h2>
 			  <div class="table-responsive">
 				<table class="table table-striped">
 				  <thead>
