--- a/form.html
+++ b/form.html
@@ -74,8 +74,7 @@
 						<li><a href="user.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Your Cruises</a></li>
-						<li><a href="#">Stuff</a></li>
-						<li><a href="#">More stuff</a></li>
+						<li><a href="#">Options</a></li>
 					</ul>
 				</li>
 			  </ul>
