--- a/user.html
+++ b/user.html
@@ -30,7 +30,7 @@
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
-		<title>R/V Gunnerus Reservation System - Cruise Registration</title>
+		<title>R/V Gunnerus Reservation System - User Profile</title>
 
 		<!-- Themed Bootstrap core CSS -->
 		<link href="styles/gunnerus_bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
 		<![endif]-->
 	</head>
 
-	<body class="adminPage">
+	<body class="userPage">
 		<nav class="navbar navbar-default navbar-fixed-top">
 		  <div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -74,8 +74,7 @@
 						<li><a href="user.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Profile</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Your Cruises</a></li>
-						<li><a href="#">Stuff</a></li>
-						<li><a href="#">More stuff</a></li>
+						<li><a href="#">Options</a></li>
 					</ul>
 				</li>
 			  </ul>
@@ -86,184 +85,177 @@
 		</div>
 		
 		<div class="container-fluid">
-		  <div class="row">
-			<div class="col-sm-3 col-md-2 sidebar">
-			  <ul class="nav nav-sidebar">
-				<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-				<li><a href="#">Reports</a></li>
-				<li><a href="#">Analytics</a></li>
-				<li><a href="#">Export</a></li>
-			  </ul>
-			  <ul class="nav nav-sidebar">
-				<li><a href="">Nav item</a></li>
-				<li><a href="">Nav item again</a></li>
-				<li><a href="">One more nav</a></li>
-				<li><a href="">Another nav item</a></li>
-				<li><a href="">More navigation</a></li>
-			  </ul>
-			  <ul class="nav nav-sidebar">
-				<li><a href="">Nav item again</a></li>
-				<li><a href="">One more nav</a></li>
-				<li><a href="">Another nav item</a></li>
-			  </ul>
+			<div class="alert alert-warning alert-dismissible" role="alert">
+			  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			  <strong><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Warning:</strong> One cruise is missing information which is due in under a week.
 			</div>
-			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			  <h1 class="page-header">Dashboard</h1>
 
-			  <div class="row placeholders">
-				<div class="col-xs-6 col-sm-3 placeholder">
-				  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-				  <h4>Label</h4>
-				  <span class="text-muted">Something else</span>
-				</div>
-				<div class="col-xs-6 col-sm-3 placeholder">
-				  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-				  <h4>Label</h4>
-				  <span class="text-muted">Something else</span>
-				</div>
-				<div class="col-xs-6 col-sm-3 placeholder">
-				  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-				  <h4>Label</h4>
-				  <span class="text-muted">Something else</span>
-				</div>
-				<div class="col-xs-6 col-sm-3 placeholder">
-				  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-				  <h4>Label</h4>
-				  <span class="text-muted">Something else</span>
+		  <!--<div class="row placeholders">
+			<div class="col-xs-6 col-sm-3 placeholder">
+			  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+			  <h4>Label</h4>
+			  <span class="text-muted">Something else</span>
+			</div>
+			<div class="col-xs-6 col-sm-3 placeholder">
+			  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+			  <h4>Label</h4>
+			  <span class="text-muted">Something else</span>
+			</div>
+			<div class="col-xs-6 col-sm-3 placeholder">
+			  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+			  <h4>Label</h4>
+			  <span class="text-muted">Something else</span>
+			</div>
+			<div class="col-xs-6 col-sm-3 placeholder">
+			  <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+			  <h4>Label</h4>
+			  <span class="text-muted">Something else</span>
+			</div>
+		  </div>-->
+		  
+		    <div class="panel panel-info user-profile">
+			  <div class="panel-heading">
+				<h3 class="panel-title">Profile for Test User</h3>
+			  </div>
+			  <div class="panel-body">
+				<div class="row">
+					<div class="col-sm-10">
+					  <div class="form-group">
+						<div class="input-group">
+						  <span class="input-group-addon" id="basic-addon1">Username</span>
+						  <input type="text" class="form-control" placeholder="Username" value="TestUser" aria-describedby="basic-addon1">
+						</div>
+					  </div>
+					  <div class="form-group">
+						<div class="input-group">
+						  <span class="input-group-addon" id="basic-addon1">Name</span>
+						  <input type="text" class="form-control" value="Test User" placeholder="Name" aria-describedby="basic-addon1">
+						</div>
+					</div>
+					  <div class="form-group">
+						<div class="input-group">
+						  <span class="input-group-addon" id="basic-addon1">Email</span>
+						  <input type="text" class="form-control" value="test_enthusiast@471.no" placeholder="Email" aria-describedby="basic-addon1">
+						</div>
+					</div>
+					  <div class="form-group">
+						<div class="input-group">
+						  <span class="input-group-addon" id="basic-addon1">Password</span>
+						  <input type="text" class="form-control" value="●●●●●●●●●●●●●●●●●●●" placeholder="Password" aria-describedby="basic-addon1">
+						</div>
+					</div>
+					  <div class="form-group">
+						<div class="input-group">
+						  <span class="input-group-addon" id="basic-addon1">Company/Institution</span>
+						  <input type="text" class="form-control" value="NTNU" placeholder="Company/Institution" aria-describedby="basic-addon1">
+						</div>
+					</div>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-info">Options</button>
+						<button type="button" class="btn btn-primary">Save</button>
+					</div>
 				</div>
 			  </div>
+			</div>
 
-			  <h2 class="sub-header">Section title</h2>
-			  <div class="table-responsive">
-				<table class="table table-striped">
-				  <thead>
-					<tr>
-					  <th>#</th>
-					  <th>Header</th>
-					  <th>Header</th>
-					  <th>Header</th>
-					  <th>Header</th>
-					</tr>
-				  </thead>
-				  <tbody>
-					<tr>
-					  <td>1,001</td>
-					  <td>Lorem</td>
-					  <td>ipsum</td>
-					  <td>dolor</td>
-					  <td>sit</td>
-					</tr>
-					<tr>
-					  <td>1,002</td>
-					  <td>amet</td>
-					  <td>consectetur</td>
-					  <td>adipiscing</td>
-					  <td>elit</td>
-					</tr>
-					<tr>
-					  <td>1,003</td>
-					  <td>Integer</td>
-					  <td>nec</td>
-					  <td>odio</td>
-					  <td>Praesent</td>
-					</tr>
-					<tr>
-					  <td>1,003</td>
-					  <td>libero</td>
-					  <td>Sed</td>
-					  <td>cursus</td>
-					  <td>ante</td>
-					</tr>
-					<tr>
-					  <td>1,004</td>
-					  <td>dapibus</td>
-					  <td>diam</td>
-					  <td>Sed</td>
-					  <td>nisi</td>
-					</tr>
-					<tr>
-					  <td>1,005</td>
-					  <td>Nulla</td>
-					  <td>quis</td>
-					  <td>sem</td>
-					  <td>at</td>
-					</tr>
-					<tr>
-					  <td>1,006</td>
-					  <td>nibh</td>
-					  <td>elementum</td>
-					  <td>imperdiet</td>
-					  <td>Duis</td>
-					</tr>
-					<tr>
-					  <td>1,007</td>
-					  <td>sagittis</td>
-					  <td>ipsum</td>
-					  <td>Praesent</td>
-					  <td>mauris</td>
-					</tr>
-					<tr>
-					  <td>1,008</td>
-					  <td>Fusce</td>
-					  <td>nec</td>
-					  <td>tellus</td>
-					  <td>sed</td>
-					</tr>
-					<tr>
-					  <td>1,009</td>
-					  <td>augue</td>
-					  <td>semper</td>
-					  <td>porta</td>
-					  <td>Mauris</td>
-					</tr>
-					<tr>
-					  <td>1,010</td>
-					  <td>massa</td>
-					  <td>Vestibulum</td>
-					  <td>lacinia</td>
-					  <td>arcu</td>
-					</tr>
-					<tr>
-					  <td>1,011</td>
-					  <td>eget</td>
-					  <td>nulla</td>
-					  <td>Class</td>
-					  <td>aptent</td>
-					</tr>
-					<tr>
-					  <td>1,012</td>
-					  <td>taciti</td>
-					  <td>sociosqu</td>
-					  <td>ad</td>
-					  <td>litora</td>
-					</tr>
-					<tr>
-					  <td>1,013</td>
-					  <td>torquent</td>
-					  <td>per</td>
-					  <td>conubia</td>
-					  <td>nostra</td>
-					</tr>
-					<tr>
-					  <td>1,014</td>
-					  <td>per</td>
-					  <td>inceptos</td>
-					  <td>himenaeos</td>
-					  <td>Curabitur</td>
-					</tr>
-					<tr>
-					  <td>1,015</td>
-					  <td>sodales</td>
-					  <td>ligula</td>
-					  <td>in</td>
-					  <td>libero</td>
-					</tr>
-				  </tbody>
-				</table>
+		  <h2 class="sub-header">Your Cruises</h2>
+		  
+		    <div class="panel panel-warning user-cruise">
+			  <div class="panel-heading">
+				<h3 class="panel-title">Cruise Name</h3>
+			  </div>
+			  <div class="panel-body">
+				<div class="row">
+					<div class="col-sm-3">
+						<ul class="list-group">
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						</ul>
+					</div>
+					<div class="col-sm-7">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-primary">Edit</button>
+						<button type="button" class="btn btn-danger">Cancel</button>
+					</div>
+				</div>
 			  </div>
 			</div>
-		  </div>
-		</div>
+			
+		    <div class="panel panel-default user-cruise">
+			  <div class="panel-heading">
+				<h3 class="panel-title">Cruise Name</h3>
+			  </div>
+			  <div class="panel-body">
+				<div class="row">
+					<div class="col-sm-3">
+						<ul class="list-group">
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						</ul>
+					</div>
+					<div class="col-sm-7">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-primary">Edit</button>
+						<button type="button" class="btn btn-danger">Cancel</button>
+					</div>
+				</div>
+			  </div>
+			</div>
+			
+		    <div class="panel panel-default user-cruise">
+			  <div class="panel-heading">
+				<h3 class="panel-title">Cruise Name</h3>
+			  </div>
+			  <div class="panel-body">
+				<div class="row">
+					<div class="col-sm-3">
+						<ul class="list-group">
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						</ul>
+					</div>
+					<div class="col-sm-7">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-primary">Edit</button>
+						<button type="button" class="btn btn-danger">Cancel</button>
+					</div>
+				</div>
+			  </div>
+			</div>
+			
+		    <div class="panel panel-default user-cruise">
+			  <div class="panel-heading">
+				<h3 class="panel-title">Cruise Name</h3>
+			  </div>
+			  <div class="panel-body">
+				<div class="row">
+					<div class="col-sm-3">
+						<ul class="list-group">
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
+						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						</ul>
+					</div>
+					<div class="col-sm-7">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="col-sm-2">
+						<button type="button" class="btn btn-primary">Edit</button>
+						<button type="button" class="btn btn-danger">Cancel</button>
+					</div>
+				</div>
+			  </div>
+			</div>
 		
 		<div class="footer container-fluid">
 			<a href="http://ntnu.no"><img src="../img/hovedlogo_eng.png"></a>
