Added temporary link to admin cp

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 							<li role="separator" class="divider"></li>
 							<li><a href="#">Your Cruises</a></li>
 							<li><a href="#">Options</a></li>
+							<li><a href="admin.html">Admin</a></li>
 						</ul>
 					</li>
 				  </ul>
