--- a/admin.html
+++ b/admin.html
@@ -143,7 +143,7 @@
 					</tr>
 				  </thead>
 				  <tbody>
-					<tr>
+					<tr class="warning">
 					  <td>1,001</td>
 					  <td>Lorem</td>
 					  <td>ipsum</td>
