"Add to calendar" -> "Add to your calendar"

--- a/user.html
+++ b/user.html
@@ -172,7 +172,7 @@
 						<ul class="list-group">
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
-						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
@@ -196,7 +196,7 @@
 						<ul class="list-group">
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
-						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
@@ -220,7 +220,7 @@
 						<ul class="list-group">
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
-						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
@@ -244,7 +244,7 @@
 						<ul class="list-group">
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
-						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
