--- a/admin.html
+++ b/admin.html
@@ -58,7 +58,7 @@
 				<span class="icon-bar"></span>
 			  </button>
 				<a class="navbar-brand" href="index.html">
-					<img alt="NTNU-logo" src="../img/Logo-Ntnu.png"> <span>F/V Gunnerus</span>
+					<img alt="NTNU-logo" src="../img/Logo-Ntnu.png"> <span>R/V Gunnerus</span>
 				</a>
 			</div>
 
