Added your cruises button when logged in

--- a/index.html
+++ b/index.html
@@ -137,7 +137,15 @@
 				 </div>
 			  </div>
 			</div>
-			<div class="btn-group-justified btn-group">
+			<div class="btn-group-justified btn-group loggedOut">
+				<div class="btn-group btn-group-lg" role="group" aria-label="...">
+					<a href="form.html" class="btn btn-primary">Order Cruise</a>
+				</div>
+			</div>
+			<div class="btn-group-justified btn-group loggedIn">
+				<div class="btn-group btn-group-lg" role="group" aria-label="...">
+					<a href="form.html" class="btn btn-info">Your Cruises</a>
+				</div>
 				<div class="btn-group btn-group-lg" role="group" aria-label="...">
 					<a href="form.html" class="btn btn-primary">Order Cruise</a>
 				</div>
