Made the "Your Cruises" link do something

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			</div>
 			<div class="btn-group-justified btn-group loggedIn">
 				<div class="btn-group btn-group-lg" role="group" aria-label="...">
-					<a href="form.html" class="btn btn-info">Your Cruises</a>
+					<a href="user.html" class="btn btn-info">Your Cruises</a>
 				</div>
 				<div class="btn-group btn-group-lg" role="group" aria-label="...">
 					<a href="form.html" class="btn btn-primary">Order Cruise</a>
