Cal style tweaks
Started modifying modal templates and adding day/month styles

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+		
+		<!-- Underscore templates -->
+		<script type="text/underscore-template" id="modal">
+			<p><%- event.name %></p>
+		</script>
 	</head>
 
 	<body class="mainPage">
@@ -202,147 +207,6 @@
 		<script src="http://www.w3schools.com/lib/w3data.js"></script>
 		<script type="text/javascript" src="js/underscore-min.js"></script>
 		<script type="text/javascript" src="js/calendar.js"></script>
-		<script type="text/javascript">
-			var calendar = $('#calendar').calendar({
-				events_source: [
-					{
-						"id": 293,
-						"title": "Tokt 1",
-						"url": "test",
-						"class": "event-important",
-						"start": 1485990000000, // Milliseconds
-						"end": 1486162800000 // Milliseconds
-					},
-					{
-						"id": 294,
-						"title": "Tokt 2",
-						"url": "test",
-						"class": "event-important",
-						"start": 1486335600000, // Milliseconds
-						"end": 1486422000000 // Milliseconds
-					},
-					{
-						"id": 295,
-						"title": "Tokt 3",
-						"url": "test",
-						"class": "event-important",
-						"start": 1486508400000, // Milliseconds
-						"end": 1486767600000 // Milliseconds
-					},
-					{
-						"id": 296,
-						"title": "Tokt 4",
-						"url": "test",
-						"class": "event-important",
-						"start": 1487631600000, // Milliseconds
-						"end": 1487718000000 // Milliseconds
-					},
-					{
-						"id": 297,
-						"title": "Tokt 5",
-						"url": "test",
-						"class": "event-important",
-						"start": 1487199600000, // Milliseconds
-						"end": 1487286000000 // Milliseconds
-					},
-					{
-						"id": 298,
-						"title": "Tokt 6",
-						"url": "test",
-						"class": "event-important",
-						"start": 1488150000000, // Milliseconds
-						"end": 1488322800000 // Milliseconds
-					},
-					{
-						"id": 299,
-						"title": "Tokt 7",
-						"url": "test",
-						"class": "event-important",
-						"start": 1489014000000, // Milliseconds
-						"end": 1489100400000 // Milliseconds
-					},
-					{
-						"id": 300,
-						"title": "Tokt 8",
-						"url": "test",
-						"class": "event-important",
-						"start": 1489100400000, // Milliseconds
-						"end": 1489186800000 // Milliseconds
-					}/*,
-					{
-						"id": 301,
-						"title": "Tokt 2",
-						"url": "test",
-						"class": "event-important",
-						"start": 1487199600000, // Milliseconds
-						"end": 1487286000000 // Milliseconds
-					},
-					{
-						"id": 700,
-						"title": "Testtokt",
-						"url": "test",
-						"class": "event-important",
-						"start": 1485995632800, // Milliseconds
-						"end": 1489995632700 // Milliseconds
-					}*/],
-					modal: "#events-modal",
-					modal_type: "ajax",
-					modal_title : function (event) { return event.title },
-					view: "year",
-					first_day: "1",
-					onAfterViewLoad: function(view) {
-						$('.dateLabel').text(this.getTitle());
-					},
-					views: {
-						year: {
-							slide_events: 1,
-							enable: 1
-						},
-						month: {
-							slide_events: 1,
-							enable: 1
-						},
-						week: {
-							enable: 1
-						},
-						day: {
-							enable: 0
-						}
-					}
-				}); 
-			$('.calendar .calPreviousButton').click(function () {
-				calendar.navigate('prev');
-				return false;
-			});
-			$('.calendar .calNextButton').click(function () {
-				calendar.navigate('next');
-				return false;
-			});
-			$('.calendar .calTodayButton').click(function () {
-				calendar.navigate('today');
-				return false;
-			});
-			$('.calendar .calYearButton').click(function () {
-				calendar.view('year');
-				return false;
-			});
-			$('.calendar .calMonthButton').click(function () {
-				calendar.view('month');
-				return false;
-			});
-			$('.calendar .calWeekButton').click(function () {
-				calendar.view('week');
-				return false;
-			});
-			$('.calendar .calDayButton').click(function () {
-				calendar.view('day');
-				return false;
-			});
-			$('.loginButton').click(function () {
-				$('body').toggleClass('loggedIn');
-				return false;
-			});
-		</script>
 		<script>
 		$(".infoCol-header").fitText();
 		</script>
