--- a/tmpls/modal.html
+++ b/tmpls/modal.html
@@ -1,10 +1,19 @@
 <% 	event.date_start = new Date(parseInt(event.start));
 	event.date_end = new Date(parseInt(event.end)); %>
-<div id = "event-meta" class  = "pull-right">
-    <span>Starts on <%= event.date_start.getDate() %> <%= calendar.locale["m" + event.date_start.getMonth()] %> <%= event.date_start.getFullYear() %>, at <%= event.date_start.getHours() %>:<%= event.date_start.getMinutes() %> <i class = "icon-time"></i></span><br />
-    <span>Ends on <%= event.date_end.getDate() %> <%= calendar.locale["m" + event.date_end.getMonth()] %> <%= event.date_end.getFullYear() %> at <%= event.date_end.getHours() %>:<%= event.date_end.getMinutes() %> <i class = "icon-time"></i></span><br />
-</div>
 
-<div style = "margin: 10px 0">
-    <a href = "<%= event.url %>" class = "btn btn-primary"><i class = "icon-calendar"></i> More info</a>
+
+<div class="row">
+	<div class="col-sm-3">
+		<ul class="list-group">
+		  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: <%= event.date_start.getDate() %> <%= calendar.locale["m" + event.date_start.getMonth()] %> <%= event.date_start.getFullYear() %>, at <%= event.date_start.getHours() %>:<%= event.date_start.getMinutes() %></li>
+		  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: <%= event.date_end.getDate() %> <%= calendar.locale["m" + event.date_end.getMonth()] %> <%= event.date_end.getFullYear() %> at <%= event.date_end.getHours() %>:<%= event.date_end.getMinutes() %></li>
+		  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
+		  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Export as PDF</button>
+		  <button type="button" class="list-group-item list-group-item-info">More info</button>
+		  <button type="button" class="list-group-item list-group-item-warning">Edit</button>
+		</ul>
+	</div>
+	<div class="col-sm-9">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
 </div>
